<resources>
    <string name="app_name">coinz</string>
    <string name="action_settings">Settings</string>
    <string name="access_token_public">pk.eyJ1IjoidmFjYmxhZGUiLCJhIjoiY2pubjY1aDJ3MDBtZDNwdGc2a3ZsMW1teiJ9.ebgwV-441maQLqB7bNm98A</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short or too long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_mywallet">MywalletActivity</string>
    <string name="title_activity_myprofile">MyprofileActivity</string>
    <string name="large_text">
        "Welcome, Companion, to the city of Whiterun! This City has heard of your bravery on the battel field, and the yarl himself has been deeply improessed.\n
        As his stward, it would be my pleasure to bring his lordship's offer to you.As you might have seen on the way here, the country of whiterun is currently possessed by ancient dragons from the second era.\n
        Many has died under their claws.The people need a savior, now  more than ever. Therefore the yarl has ordered you, as well as other advantures, to fight against those monsters, beat them and bring back peace and hope to the land of Skyrim.\n      The location of their nest has been marked on your map, be sure to note it down before you set off. As you slay those dragons, you would get different kinds of dragon scales,
        a valuable resource that can be sold for gold, or even better,used to purchase properties from me! Since this is war time, our fianase is relatively short,the yarl is only willing to pay for 25 pieces of scales per day,,but you can always send your spare scales to your fellow companions so that they may put it to better use! \n
        Here is a copy of the yarl's contract in case you would like to find out more about it. Good luck and may we meet in Sovngarde again!"
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_slidebar">slidebarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_myfriend">companions</string>
    <string name="title_activity_friendinfo">friendinfo</string>
    <string name="title_activity_coin">Coin</string>
    <string name="title_activity_mywallet2">sub inventory</string>
    <string name="title_activity_signup2">Sign up</string>
    <string name="title_activity_walletselect">My Inventory</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_mapbox2">map</string>
    <string name="contract">"let it here by be known, it is the yarl's will that the following facts should be known, and rules be complied when come to the issues around bounty on the dragons:\n
        1. the dragons that roam around the country side , when approached and killed by the advantures, drop dragon bones.It is a valuable resource as it can be made into one of the finest armors and weapons(that is, if you are level 100 at blacksmith, though) Different type of dragons drop different type of scales.
        2. the dragon bones that is collected from the dragons can be exchange to gold , subject to exchange rate given by the steward, which would update everyday as the steward sees fit.. larger piece of scale would have better price porpotional to the size.the advantagers can exchange at most 25 pieces of scales for gold at each day.
        3. the dragon bones that hasn't been exchanged for gold yet get stored in the your inventory, which you can use to send to a friend as a gift.Anyone coin that received as a gift can be exchanged for gold, even if the daily exchange limit has been reached.
        4. you can only send bones to those advantures you know. you can add companions by their username. you can send at most 30 coins a day.
        5. under the yarl 's generous offer, advantures can use their gold to purchase any properties and shops available in the city, provided that they have enough gold. After a property is purchased, it would produce a gold coin at the property's location. The properties produce gold every day.
        6. you can see a dragon only when you gets close enough to it.

        " </string>
    <string name="prompt_friend_username">input your companion username </string>
    <string name="delete_friend">delete friend</string>
    <string name="refuse">refuse</string>
    <string name="accept">accept</string>
    <string name="title">Skyrim Local Edition</string>
    <string name="subtitle">Welcome to Whiterun!</string>
    <string name="truetitle">also known as coinZ</string>
    <string name="testing">testing</string>
    <string name="save_it">save it</string>
    <string name="penytext">fire dragon bone:  %1$s kg</string>
    <string name="dolrtext">ancient dragon bone:  %1$s kg</string>
    <string name="quidtext">blood dragon bone:  %1$s kg</string>
    <string name="shiltext">frost dragon bone:  %1$s kg</string>
    <string name="goldtext">gold dragon bone:  %1$s </string>
    <string name="penyrate">%1$s gold per kg.</string>
    <string name="dolrrate">%1$s gold per kg.</string>
    <string name="quidrate">%1$s gold per kg.</string>
    <string name="shilrate">%1$s gold per kg.</string>
    <string name="send">send</string>
    <string name="sendprompt"> "Who would you like to send?"</string>
    <string name="dismiss"> dismiss</string>


</resources>
